Changes for 1.2.7
* Moore AI speed fix, and added combined getNeighbors() to GameMap.java. Moore AI now as additional logging properties, comments, and several methods updated to work much faster. (squidbait)

* New Unit Option: "isAirBase" allows units to scramble to combat (ComradeKev)

* New Unit Option: "maxOperationalDamage" sets max damage to be sustained before unit is disabled (ComradeKev)

* New Unit Option: "maxDamage" sets total max damage for a unit (ComradeKev)

* New Unit Option: "isInfrastructure" infrastructure units can be bombed (ComradeKev)

* New Unit Option: "isCombatInfrastructure" units can be bombed or taken as casualties in regular combat (ComradeKev)

* New Property: "Display Units as Counters" (COUNTERS_DISPLAY), will make stacks out of units up to a certain amount. (Edwin van der Wal)

* Moore AI SUtils fix, findNearest() and distanceToEnemy() completely re-written to be much faster. (squidbait)

* Moore AI and Easy AI repair rules fix, will now repair intelligently, and never under repair at all, or over repair by more than a couple pu's. (veqryn)

* Moore AI fixed a bug in SUtils.distanceToEnemy() so that it will return the minimum distance, rather than the first distance it finds. (squidbait)

* Moore AI will now move factories if they can move them and there is more than 1 in a territory (veqryn), and some non-combat fixes and logging (squidbait)

* Moore AI will now bid single units to territories, and bid to all it territories before cycling over to bid to the first one again. Starts with territories touching the enemy. Also fixed a bug in SUtils.distanceToEnemy(). (veqryn)

* MustFightBattle was removing all movement from all units (including air) that stopped to kill an undefended transport, and should not remove movement of air units. (veqryn)
